tests/samples/expression-invalid-5/error.full.txt
Found "]" on line 2 at index 32, while expecting expression.

1|// error: empty []
2|        { (na9me_.a().pm["[]"][]["mop'op"].mm(4.258,'oplm').tty + 9  + (mmo[0))}
                                 ^
3|

File: /mnt/Emile/silassare/blate/src/Exceptions/Traits/BlateExceptionTrait.php
Line: 56
#0 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(216): Blate\Exceptions\BlateRuntimeException::withToken()
#1 /mnt/Emile/silassare/blate/src/Expressions/Grammar/SquareBracket.php(46): Blate\Expressions\ExpressionParser->parse()
#2 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(150): Blate\Expressions\Grammar\SquareBracket->handle()
#3 /mnt/Emile/silassare/blate/src/Expressions/Grammar/Parenthesis.php(40): Blate\Expressions\ExpressionParser->parse()
#4 /mnt/Emile/silassare/blate/src/Expressions/ExpressionParser.php(142): Blate\Expressions\Grammar\Parenthesis->handle()
#5 /mnt/Emile/silassare/blate/src/Expressions/Expression.php(31): Blate\Expressions\ExpressionParser->parse()
#6 /mnt/Emile/silassare/blate/src/Parser.php(142): Blate\Expressions\Expression->get()
#7 /mnt/Emile/silassare/blate/src/Parser.php(94): Blate\Parser->expression()
#8 /mnt/Emile/silassare/blate/src/Blate.php(143): Blate\Parser->parse()
#9 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(261): Blate\Blate->parse()
#10 /mnt/Emile/silassare/blate/tests/TemplateSyntaxTest.php(98): Blate\Tests\TemplateSyntaxTest->runInvalid()
#11 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1545): Blate\Tests\TemplateSyntaxTest->testExpressionInvalid5()
#12 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(1151): PHPUnit\Framework\TestCase->runTest()
#13 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestResult.php(726): PHPUnit\Framework\TestCase->runBare()
#14 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestCase.php(903): PHPUnit\Framework\TestResult->run()
#15 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestCase->run()
#16 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#17 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/Framework/TestSuite.php(677): PHPUnit\Framework\TestSuite->run()
#18 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/TestRunner.php(673): PHPUnit\Framework\TestSuite->run()
#19 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(143): PHPUnit\TextUI\TestRunner->run()
#20 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/src/TextUI/Command.php(96): PHPUnit\TextUI\Command->run()
#21 /mnt/Emile/silassare/blate/vendor/phpunit/phpunit/phpunit(98): PHPUnit\TextUI\Command::main()
#22 {main}